<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_fragment_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/statistics"
        app:titleTextColor="@android:color/white" />

    <Button
        style="@style/MaterialButton"
        android:id="@+id/starting_date_fragment_statistics"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/date_starting_from"
        android:textColor="@color/color_white"
        android:textSize="@dimen/super_small_text_size"
        android:background="@color/colorPrimaryLight"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_fragment_statistics" />

    <Button
        android:background="@color/colorPrimaryLight"
        style="@style/MaterialButton"
        android:id="@+id/ending_date_fragment_statistics"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/date_ending_with"
        android:textColor="@color/color_white"
        android:textSize="@dimen/super_small_text_size"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_fragment_statistics"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>